# jed

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  buffer.c  buffer.h  cursor.c  cursor.frag  cursor.h  cursor.vert  editor.c  editor.h  file.c  file.h  free_font.c  free_font.h  gl_extra.c  gl_extra.h  la.c  la.h  main.c  sdl_extra.c  sdl_extra.h
shaders/: font.frag  font.vert
